fix for 1.7 shared header margins, spacing, and responsive

--- a/branding/supplemental-ui/mlm/susecom-2025/css/site-extra.css
+++ b/branding/supplemental-ui/mlm/susecom-2025/css/site-extra.css
@@ -211,6 +211,11 @@ a.navbar-logo {
 /* left nav panel */
 .nav-panel-menu {
   background-color: #efefef;
+  height: calc(100%);
+}
+
+.nav-panel-explore {
+    visibility: hidden;
 }
 
 .panels {
@@ -1221,6 +1226,7 @@ nav.pagination a {
   color: #00112b;
 }
 
+/*
 .survey-link {
   background-color: #90ebcd;
   padding: 16px;
@@ -1232,6 +1238,7 @@ nav.pagination a {
   z-index: 3;
   text-decoration: none;
 }
+  */
 
 .toolbar .library-link {
   display: inline-flex;
@@ -1322,7 +1329,7 @@ margin: .225rem;
 .toolbar {
   background-color: #efefef;
   /* Shared Header - start */
-  top: 6.9rem;
+  top: 6.8rem;
   /* Shared Header - end */
 }
 
@@ -1347,7 +1354,7 @@ body {
 
 /* Shared Header - start */
 .nav {
-  top: 6.9rem;
+  top: 6.8rem;
   -webkit-box-shadow: none;
   box-shadow: none;
   position: sticky;
@@ -1367,3 +1374,25 @@ shared-header {
 }
 
 /* Shared Header - end */
+
+/* Ensure main content area fills viewport minus header */
+.body, main > .content {
+  min-height: calc(100vh - 2.2rem); /* 2.2rem is the sharedheader height, I think */
+}
+
+.doc {
+  margin-top: 122px;
+}
+
+@media screen and (max-width: 992px) {
+  .doc {
+    margin-top: 76px;
+  }
+  .toolbar {
+    top: 76px;
+    margin-top: 10px;
+  }
+  .nav {
+    margin-top: 60px;
+  }
+}
